--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router": "^6.17.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-select": "^5.7.7",
+    "react-switch": "^7.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
