--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/themes": "^2.0.0",
-    "bootstrap": "^5.3.2",
     "firebase": "^10.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
